# opendbviewer

./: Makefile.am  README  configure.ac  openDbViewer.bat  opendbviewer.sh
data/: Makefile.am
data/ui/: Makefile.am  connection_panel.glade  main.glade  queryresult_panel.glade  select_connection.glade  table_panel.glade  worksheet_panel.glade
src/: Makefile.am  opendbviewer.py
src/app/: Makefile.am  __init__.py  xdg.py
src/appgui/: Makefile.am  __init__.py  selectconnection.py
src/appgui/cellrenderers/: Makefile.am  cellrenderdbdata.py
src/appgui/panel/: Makefile.am  __init__.py  connection.py  queryresult.py  table.py  worksheet.py
src/dbconnector/: Makefile.am  __init__.py  sqlite3.py  win32adodb.py
