dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(opendbviewer, 0.1)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AM_PATH_PYTHON







AC_OUTPUT([
Makefile
data/Makefile
data/ui/Makefile
src/Makefile
src/app/Makefile
src/appgui/Makefile
src/appgui/cellrenderers/Makefile
src/appgui/panel/Makefile
src/dbconnector/Makefile
])
