## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
bin_SCRIPTS = opendbviewer.py

## Directory where .class files will be installed
opendbviewerdir = $(pythondir)/opendbviewer

opendbviewer_PYTHON = \
	opendbviewer.py

SUBDIRS = \
	app \
	appgui \
	dbconnector
